@@ -215,6 +215,7 @@ tag_format = %v-source
 
 [Git::NextRelease / @Author::KENTNL/Git::NextRelease]
 :version = 0.004000
+default_branch = master
 format = %v %{yyyy-MM-dd'T'HH:mm:ss}dZ %h
 time_zone = UTC
 
