@@ -4,6 +4,7 @@
  [00 Features]
  - copyfiles now copies LICENSE and Makefile.PL by default.
  - RemovePrereqs::Provided is now standard issue.
+ - default_branch now specified for headless Git::NextRelease
 
  [Dependencies::Stats]
  - Dependencies changed since 2.024002, see misc/*.deps* for details
